[package]
name = "lifelink"
description = "Erase covariant lifetime parameters from anything, with generic associated types."
repository = "https://github.com/chitoyuu/lifelink"
documentation = "https://docs.rs/lifelink"
authors = ["Chitose Yuuzaki <chitoyuu@potatoes.gay>"]
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2018"
readme = "README.md"
keywords = ["lifetime", "ownership", "reference", "cryo"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11.2"

[features]
nightly = []

[package.metadata.docs.rs]
features = ["nightly"]